src/objects/KYC_Sheet__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_fully_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application fully completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branch_Compliance_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch Compliance Visit</label>
        <referenceTo>Branch_Compliance_Visit__c</referenceTo>
        <relationshipLabel>KYC Sheets</relationshipLabel>
        <relationshipName>KYC_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COA_actioned_within_1_month_of_acc_open__c</fullName>
        <inlineHelpText>Change of address actioned within one month of the date of the application signature? If yes, a fresh POA is required and should be available on Datastore.</inlineHelpText>
        <label>COA actioned within 1 month of acc open?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Captured_Nature_of_Business_Background__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Captured Nature of Business/Background?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certified_by1__c</fullName>
        <label>Certified by?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>HO</fullName>
                </value>
                <value>
                    <fullName>3rd party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certified_by__c</fullName>
        <label>Certified by?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>HO</fullName>
                </value>
                <value>
                    <fullName>3rd party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charity_No_or_Incorporation_No__c</fullName>
        <inlineHelpText>Doc sampled to state company name/no/date incorporated as on application. Do not proceed if without further info if status is Dormant/Dissolved/In Liquidation/Company Removed, or if accounts/annual return are overdue.</inlineHelpText>
        <label>Charity No or Incorporation No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checklist_signed_by_Processing_MOS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checklist signed by Processing MOS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checklist_signed_by_Sampler__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checklist signed by Sampler?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>College_letter_format_valid__c</fullName>
        <inlineHelpText>Ref KYC Matrix, includes UK and overseas address, full name, DOB, nationality, country of residence, course title, course length and contact details</inlineHelpText>
        <label>College letter format valid?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments2__c</fullName>
        <inlineHelpText>Guidance: For 3rd party certification record details of 3rd party and that they were were verified by the MOS. For change of address within 30 days of application and new proof of address must be provided.</inlineHelpText>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments3__c</fullName>
        <inlineHelpText>Guidance: For 3rd party certification record details of 3rd party and that they were were verified by the MOS. For change of address within 30 days of application and new proof of address must be provided.</inlineHelpText>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments4__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_KYC_Checklist_attached_to_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed KYC Checklist attached to App?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correct_form_used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct form used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOB_on_ID_matches_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOB on ID matches Application?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Sampled__c</fullName>
        <label>Date Sampled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Application__c</fullName>
        <label>Date of Application</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline2__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline3__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline4__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DfEs_Registered__c</fullName>
        <inlineHelpText>Institution appears on DfEs Register of Education &amp; providers?</inlineHelpText>
        <label>DfEs Registered?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_in_date1__c</fullName>
        <label>Document in date?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_in_date__c</fullName>
        <label>Document in date?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Certified__c</fullName>
        <label>ID Certified?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_match_address_proof_and_Application__c</fullName>
        <label>ID match address proof and Application?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_Card_used_for_ID__c</fullName>
        <inlineHelpText>Check the employment status on it, if it states ‘Employment Prohibited’ check what the application states, if employed check with FCU to see if a SAR was raised, if not then it has failed</inlineHelpText>
        <label>IND Card used for ID?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_date1__c</fullName>
        <label>Issue date?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_date__c</fullName>
        <label>Issue date?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Keesing_PRADO_Verified__c</fullName>
        <label>Keesing/PRADO Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Status__c</fullName>
        <label>Legal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Limited Company</fullName>
                </value>
                <value>
                    <fullName>Sole Trader</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Registered Charity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Edgware Road</fullName>
                </value>
                <value>
                    <fullName>Whitechapel</fullName>
                </value>
                <value>
                    <fullName>Leicester</fullName>
                </value>
                <value>
                    <fullName>Small Heath</fullName>
                </value>
                <value>
                    <fullName>Manchester</fullName>
                </value>
                <value>
                    <fullName>Contact Centre</fullName>
                </value>
                <value>
                    <fullName>Head Office</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Address_on_application_match_KYC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Name and Address on application matches ID and Address verification correctly</inlineHelpText>
        <label>Name/Address on application match KYC?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Country_for_Non_UK_Passport__c</fullName>
        <label>Name of Country for Non UK Passport?</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Existing_Customer__c</fullName>
        <inlineHelpText>Note: For Non Personal Application, complete a Personal Customer Type Checklist for each Signatory using their own individual Customer number</inlineHelpText>
        <label>New/Existing Customer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <label>Overall Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POA_Certified__c</fullName>
        <label>POA Certified?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POA_Doc_Address_matches_Application_Add__c</fullName>
        <label>POA Doc Address matches Application Add?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parties_to_Application_ALL_Identified__c</fullName>
        <label>Parties to Application ALL Identified?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parties_to_the_Application_ALL_identifie__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Guidance: Includes all applicable Directors, Shareholders (25%+), Trustees, Signatories, etc.</inlineHelpText>
        <label>Parties to Application ALL identified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passport_Expiry_Date__c</fullName>
        <label>Passport Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personal_KYC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Personal KYC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Personal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>KYC_Sheet__c</referenceTo>
        <relationshipLabel>KYC Sheets</relationshipLabel>
        <relationshipName>KYC_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KYC_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remedial_Action2__c</fullName>
        <label>Remedial Action</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remedial_Action3__c</fullName>
        <label>Remedial Action</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remedial_Action4__c</fullName>
        <label>Remedial Action</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signed_by_all_parties__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed by all parties?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_document_provided1__c</fullName>
        <inlineHelpText>If Non Personal: HMRC letter dated within 12m &amp; registration no. Lease copy in business name. Accountants letter on headed paper, stating acts for company. Companies House letters for startups. Name/No./address agree with app. For recent changes 288a,296</inlineHelpText>
        <label>Type of document provided?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Utility Bill</fullName>
                </value>
                <value>
                    <fullName>Bank Statement</fullName>
                </value>
                <value>
                    <fullName>HMRC correspondence</fullName>
                </value>
                <value>
                    <fullName>College Letter</fullName>
                </value>
                <value>
                    <fullName>Council Tax Bill</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lease Agreement</fullName>
                </value>
                <value>
                    <fullName>Accountant Letter</fullName>
                </value>
                <value>
                    <fullName>Companies House Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_document_provided__c</fullName>
        <inlineHelpText>If other, record in comments</inlineHelpText>
        <label>Type of document provided?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Driving Licence and counterpart</fullName>
                </value>
                <value>
                    <fullName>Travel Document</fullName>
                </value>
                <value>
                    <fullName>Home Office IND</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_Address_proof_provided__c</fullName>
        <inlineHelpText>For Postal applications 2 address proof’s must be provided</inlineHelpText>
        <label>Valid Address proof provided?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_ID_proof_provided__c</fullName>
        <label>Valid ID proof provided?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_Visa_Presented__c</fullName>
        <label>Valid Visa Presented?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verification_Date1__c</fullName>
        <label>Verification Date?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verification_Date__c</fullName>
        <label>Verification Date?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visa_Expiry_Date__c</fullName>
        <label>Visa Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visa_Type_Valid__c</fullName>
        <inlineHelpText>Is type of Visa compatible with details on application form? e.g. student / holiday / no employment, but applicant employed. If not, SAR appropriate.</inlineHelpText>
        <label>Visa Type Valid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>KYC Sheet</label>
    <nameField>
        <label>KYC Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KYC Sheets</pluralLabel>
    <recordTypes>
        <fullName>Non_Personal</fullName>
        <active>true</active>
        <description>Non Personal KYC</description>
        <label>Non Personal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Personal</fullName>
        <active>true</active>
        <description>Personal KYC</description>
        <label>Personal</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>